[ fix #252 ] Fix link contrast in light-mode

--- a/style/style.less
+++ b/style/style.less
@@ -334,22 +334,12 @@
         content: " ";
         white-space: pre;
     }
-
-    &.component-hole,
-    &.component-location {
-        color: @hole;
-    }
 }
 
 .component-link:hover {
     color: @link-hover;
     cursor: pointer;
     text-decoration: underline;
-
-    &.component-hole,
-    &.component-location {
-        color: @hole-hover;
-    }
 }
 
 
